@@ -9,10 +9,12 @@ features=('debug' 'plugin' 'iplookup' 'proxy' 'wget' 'libnotify')
 
 VERSION=
 
+[ ! -f 'Makefile' ] && ../configure
+
 clear
 echo "Preparing new release, please stand by..."
 if make dist-bzip2 >/dev/null; then
-    VERSION=`grep AC_INIT configure.ac | sed -e 's#AC_INIT(\[pcmanx-gtk2\],\[##g' -e 's#\],\[http://groups.google.com/group/PCManX\])##g'`
+    VERSION=$(../configure --help | head -n1 | awk '{ print $4 }')
 else
     abort Tarball generation fails.
 fi
@@ -20,7 +22,7 @@ echo
 
 for ((i=0; i<${#features[@]}; i++)); do
     echo "Attempting to build ${features[$i]} support..."
-    tar jxf pcmanx-gtk2-${VERSION}.tar.bz2
+    tar xjf pcmanx-gtk2-${VERSION}.tar.bz2
     pushd pcmanx-gtk2-${VERSION}
     if ./configure --enable-${features[$i]} > build.log && make >> build.log 2>&1; then
         echo -e "\033[44;37mPassed!\033[m"
